# discord-bot-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  README_TW.md  guild_id.txt
assets/: update_example.md
assets/update/: 20240520.md  20240521.md  20240522.md  20240523.md  20240528.md  20240531.md  20240603.md  20240604.md  20240613.md  20240925.md  20240928.md  20240930.md  20241008.md
info/: ai.md  anti_tiktok.md  ban.md  cash.md  common.md  info.md  reminder.md  tiktok_refuse.md
src/: __main.rs  main.rs
src/commands/: anti_tiktok.rs  ban.rs  base.rs  cash.rs  chat.rs  image.rs  info.rs  join.rs  leave.rs  look.rs  mod.rs  music_look.rs  music_play.rs  music_search.rs  music_select.rs  openai.rs  ping.rs  play.rs  remind.rs  reminder.rs  rm_remind.rs  tiktok_refuse.rs
src/commands/anti_tiktok/: tiktok_msg_add.rs
src/commands/ban/: add_ban.rs  display_block_list.rs  remove_block.rs  un_ban.rs
src/commands/base/: info.rs  ping.rs  update.rs
src/commands/openai/: chat.rs  image.rs  model_list.rs
src/commands/reminder/: look.rs  remind.rs  rm_remind.rs
src/commands/tiktok_refuse/: tiktok_msg_add.rs
src/modules/: anti_tiktok.rs  bot_process.rs  func.rs  mod.rs  music.rs  reminder.rs
