[package]
name = "discord-bot-rs"
version = "0.6.1"
edition = "2021"

[dependencies]
async-openai = "0.24.0"
chrono = "0.4.38"
chrono-tz = "0.10.0"
dotenv = "0.15.0"
serenity = { version = "0.12.1", features = [
    "client",
    "framework",
    "standard_framework",
    "http",
    "model",
    "cache",
] }
tiktoken-rs = { version = "0.5.9", features = ["async-openai"] }
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
colored = "2.1.0"
once_cell = "1.19.0"
urlencoding = "2.1.3"
regex = "1.10.6"
