[package]
name = "discord-bot-rs" # 項目名稱
version = "0.7.7"       # 項目版本
edition = "2021"        # Rust 版本

[dependencies] # 項目依賴
# 異步 OpenAI API 客戶端
async-openai = "0.24.0"
# 日期和時間處理
chrono = "0.4.38"
chrono-tz = "0.10.0"
# 環境變量加載
dotenvy = "0.15.7"
# Discord API 客戶端
serenity = { version = "0.12.1", features = [
    "client",
    "framework",
    "standard_framework",
    "http",
    "model",
    "cache",
] }
# OpenAI token 計數工具
tiktoken-rs = { version = "0.5.9", features = ["async-openai"] }
# 異步運行時
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread"] }
# 序列化和反序列化
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
# 終端輸出著色
colored = "2.1.0"
# 全局變量
once_cell = "1.19.0"
# 正則表達式
regex = "1.10.6"
# 隨機數生成
rand = "0.8.5"
rand_chacha = "0.3.1"

[profile.dev] # 開發模式的設置
opt-level = 0 # 優化等級（0 表示沒有優化）

[profile.release] # 發佈模式的設置
opt-level = 3 # 優化等級（3 表示最高優化）
