[package]
name = "discord-bot-rs" # 項目名稱
version = "0.7.7"       # 項目版本
edition = "2021"        # Rust 版本

[dependencies] # 項目依賴
# 異步 OpenAI API 客戶端
async-openai = "0.27.2"
# 日期和時間處理
chrono = "0.4.39"
chrono-tz = "0.10.1"
# 環境變量加載
dotenvy = "0.15.7"
# Discord API 客戶端
serenity = { version = "0.12.4", features = [
    "client",
    "framework",
    "standard_framework",
    "http",
    "model",
    "cache",
] }
# OpenAI token 計數工具
tiktoken-rs = { version = "0.6.0", features = ["async-openai"] }
# 異步運行時
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
# 序列化和反序列化
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
# 終端輸出著色
colored = "3.0.0"
# 全局變量
once_cell = "1.20.3"
# 正則表達式
regex = "1.11.1"
# 隨機數生成
rand = "0.9.0"
rand_chacha = "0.9.0"

[profile.dev] # 開發模式的設置
opt-level = 0 # 優化等級（0 表示沒有優化）

[profile.release] # 發佈模式的設置
opt-level = 3 # 優化等級（3 表示最高優化）
